# mol-viz-studio

./: .gitignore  README.md  environment.yml  main  main.py  pyproject.toml  requirements.txt
molviz/: __init__.py  app.py  main_window.py
molviz/analysis/: __init__.py  measurements.py
molviz/annotations/: __init__.py  annotation_manager.py
molviz/export/: __init__.py  image_exporter.py
molviz/parsers/: __init__.py  mae_parser.py  molecule.py  pdb_parser.py
molviz/ui/: __init__.py  dialogs.py  properties_panel.py
molviz/viewer/: __init__.py  mol_viewer.py  pymol_viewer.py  viewer_bridge.py
molviz/viewer/html/: viewer.html
tests/: test_analysis.py  test_annotations.py  test_parsers.py
