[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "molviz-studio"
version = "1.0.0"
description = "A PyQt6-based molecular visualization desktop application supporting .mae, .maegz, and .pdb files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-WebEngine>=6.5.0",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
]

[project.scripts]
molviz-studio = "molviz.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["molviz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
